--- a/campaigns/webinar.html
+++ b/campaigns/webinar.html
@@ -38,7 +38,6 @@
             border: 0;
             padding-left: 50px;
             padding-right: 50px;
-            text-align: left;
         }
 
         .copy {
@@ -86,63 +85,78 @@
             <tr>
                 <td>
 
-                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar1.png"> 
-                        <br><br>
-                        <h1>Is Your Sustainability Readiness Evolving at
-                            <br>
-                            the Speed of Consumers’ New Expectations?
-                        </h1>
+                    <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar1.png"> 
+                    <br><br>
+                    <h1>Is Your Sustainability Readiness Evolving at
                         <br>
-                        <span style="font-weight: bold; text-align: center; display: block;">
-                            Join us for this <u>can’t-miss</u> webinar on 2022’s
-                            <br>
-                            most important issue driving CPG & retail business growth.
-                        </span>
-                        <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img alt="photo" style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
-                        <br><br>
-                        <p style="font-style: italic; color: #545D88; text-align: center; font-weight: bold;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
-                        <br><br>
-                        This <span style="text-decoration: underline; color: #545D88; font-weight: bold;">FREE</span> one-hour webinar will cover how to move from CSR Sustainability to Sustainability as a <span style="color: #545D88; font-weight: bold;">Competitive Advantage</span>, including:
-                        <br><br>
-                        <ul>
-                            <li>The Definitive Food Retail <b>Sustainability Business Case</b></li>
-                            <li>The <b>Top 10 Mistakes</b> Companies are Making with Sustainability Programs</li>
-                            <li>Consumer Insight: Sustainability as <b>Preference Driver</b></li>
-                            <li>Best Practices for Developing a Strategic, <b>Performance-Driven</b> Sustainability Advantage</li>
-                            <li>Tools & Resources to <b>Pressure Test</b> Your Sustainability Results vs Your Activities</li>
-                        </ul>
-                        <br>
-                        <span style="color: #545D88; font-weight: bold;">Brand Sustainability Solution™</span>
-                        <br>
-                        Team Presenters:
-                        <br>
-                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar2.png">
-                        <br><br>
-                        <span style="color: #545D88; font-weight: bold;">Who Should Attend?</span>
-                        <br>
-                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar3.png">
-                        <br><br>
-                        <span style="color: #545D88; font-weight: bold;">The Sustainability Competitive Advantage webinar is hosted by:</span>
-                        <br>
-                        <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar4.png">
-                        <br><br>
-                        <h2>This may be the most important webinar you attend this year.</h2>
-                        <br>
-                        <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img alt="photo" style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
-                        <br><br>
-                        <span style="text-align: center; display: block;">
-                            Attendance is Limited. 
-                            <br>  
-                            Can't attend live? Still <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank">register</a>.
-                            <br>
-                            A recording of the webinar will be made available to registrants.
-                        </span>
-                        <br><br>
-                        <span class="copy">&copy; 2022 <a href="http://brandexperience-group.com/" style="color: #666; text-decoration: underline;" target="_blank">The Brand Experience Group</a>. To unsubscribe, <a href="{$unsubscribe}" style="color: #666; text-decoration: underline;" target="_blank">click here</a>.</span>
-
+                        the Speed of Consumers’ New Expectations?
+                    </h1>
                 </td>
             </tr>
+
+            <tr>
+                <td align="center">
+                    <span style="font-weight: bold; text-align: center; display: block;">
+                        <br>
+                        Join us for this <u>can’t-miss</u> webinar on 2022’s
+                        <br>
+                        most important issue driving CPG & retail business growth.
+                        <br><br>
+                    </span>
+                    <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img alt="photo" style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
+                    <br><br>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <p style="font-style: italic; color: #545D88; text-align: center; font-weight: bold;">Sustainability will be the driving force for business growth for the foreseeable future.</p>
+                    <br><br>
+                    This <span style="text-decoration: underline; color: #545D88; font-weight: bold;">FREE</span> one-hour webinar will cover how to move from CSR Sustainability to Sustainability as a <span style="color: #545D88; font-weight: bold;">Competitive Advantage</span>, including:
+                    <br><br>
+                    <ul>
+                        <li>The Definitive Food Retail <b>Sustainability Business Case</b></li>
+                        <li>The <b>Top 10 Mistakes</b> Companies are Making with Sustainability Programs</li>
+                        <li>Consumer Insight: Sustainability as <b>Preference Driver</b></li>
+                        <li>Best Practices for Developing a Strategic, <b>Performance-Driven</b> Sustainability Advantage</li>
+                        <li>Tools & Resources to <b>Pressure Test</b> Your Sustainability Results vs Your Activities</li>
+                    </ul>
+                    <br>
+                    <span style="color: #545D88; font-weight: bold;">Brand Sustainability Solution™</span>
+                    <br>
+                    Team Presenters:
+                    <br>
+                    <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar2.png">
+                    <br><br>
+                    <span style="color: #545D88; font-weight: bold;">Who Should Attend?</span>
+                    <br>
+                    <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar3.png">
+                    <br><br>
+                    <span style="color: #545D88; font-weight: bold;">The Sustainability Competitive Advantage webinar is hosted by:</span>
+                    <br>
+                    <img alt="photo" class="large" src="https://brandexperience-group.com/campaigns/assets/webinar4.png">
+                    <br><br>
+                    <h2>This may be the most important webinar you attend this year.</h2>
+                    <br>
+                </td>
+            </tr>
+
+            <tr>
+                <td align="center">
+                    <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank"><img alt="photo" style="display: block; margin-left: auto; margin-right: auto; width: 129px;" src="https://brandexperience-group.com/campaigns/assets/buttonwebinar.png"></a>
+                    <br><br>
+                    <span style="text-align: center; display: block;">
+                        Attendance is Limited. 
+                        <br>  
+                        Can't attend live? Still <a href="https://us06web.zoom.us/webinar/register/WN_gmaCLpC3SgKJrNg0EL0c4w" target="_blank">register</a>.
+                        <br>
+                        A recording of the webinar will be made available to registrants.
+                    </span>
+                    <br><br>
+                    <span class="copy" style="text-align: center; display: block;">&copy; 2022 <a href="http://brandexperience-group.com/" style="color: #666; text-decoration: underline;" target="_blank">The Brand Experience Group</a>. To unsubscribe, <a href="{$unsubscribe}" style="color: #666; text-decoration: underline;" target="_blank">click here</a>.</span>
+                </td>
+            </tr>
+
         </table>
     </div>
 </body>
