--- a/signature.html
+++ b/signature.html
@@ -8,12 +8,12 @@
 
 	<br>
 
-	<span style="color: #666666; font-size: 8.5pt;">Projects Coordinator</span>
+	<span style="color: #666666; font-size: 8.5pt;">Project Manager</span>
 
 	<br><br><br>
-
+	
 	<a href="http://step-stp.com/" target="_blank"><img src="./logo.png" alt=""></a>
-
+<br>
 </div>
 
 </html>
